fix: update as per the feedback

--- a/docs/references/page-builder/plugins.mdx
+++ b/docs/references/page-builder/plugins.mdx
@@ -60,6 +60,18 @@ export type PbEditorPageElementPlugin = Plugin & {
 };
 ```
 
+### `pb-render-page-element`
+
+```ts
+export type PbRenderElementPlugin = Plugin & {
+  type: "pb-render-page-element";
+  // Name of the pb-element plugin this render plugin is handling.
+  elementType: string;
+  // A function to render an element in the actual page.
+  render: (params: { theme: PbTheme; element: PbElement }) => React.ReactNode;
+};
+```
+
 ### `pb-editor-page-element-advanced-settings`
 
 ```ts
@@ -72,14 +84,12 @@ export type PbEditorPageElementAdvancedSettingsPlugin = Plugin & {
 };
 ```
 
-### `pb-render-page-element`
+### `pb-editor-page-element-style-settings`
 
 ```ts
-export type PbRenderElementPlugin = Plugin & {
-  type: "pb-render-page-element";
-  // Name of the pb-element plugin this render plugin is handling.
-  elementType: string;
-  // A function to render an element in the actual page.
-  render: (params: { theme: PbTheme; element: PbElement }) => React.ReactNode;
+export type PbEditorPageElementStyleSettingsPlugin = Plugin & {
+  type: "pb-editor-page-element-style-settings";
+  render(params: { options?: any }): ReactElement;
+  elements?: boolean | string[];
 };
 ```
