--- a/docs/tutorials/page-builder/customize-an-existing-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/customize-an-existing-page-builder-element.mdx
@@ -6,18 +6,18 @@ keywords: ["plugin", "Page builder", "Webiny", "Customize"]
 description: How to Customize an Existing Page Builder Element
 ---
 
+<!-- Include this when needed (e.g. when explaining a feature that was introduced in a specific Webiny version) -->
+
+:::info Can I Use This?
+This feature is available since Webiny **v5.1.0**.
+:::
+
 <!-- Always include this section on top of the page. -->
 
 :::tip What You’ll Learn
 
 - how to customize an existing Page Builder element
 - how to add settings to an existing element
-:::
-
-<!-- Include this when needed (e.g. when explaining a feature that was introduced in a specific Webiny version) -->
-
-:::info Can I Use This?
-This feature is available since Webiny **v5.1.0**.
 :::
 
 ## Overview
@@ -94,6 +94,12 @@ button({
 // Other element plugins.
 //
 ```
+:::note
+`"pb-editor-page-element-style-settings-padding"` and `"pb-editor-page-element-style-settings-width"`
+are the name of plugins.
+
+Both are of type: [`PbEditorPageElementStyleSettingsPlugin`](/docs/references/page-builder/plugins#pb-editor-page-element-style-settings).
+:::
 
 After saving these changes, the `button` element settings will have `padding` and `width` settings as shown below:
 
@@ -167,7 +173,7 @@ After saving these changes the previously applied changes will show in the edito
 
 <!-- vale on -->
 
-All seems to works well, right? Let's see:
+All seems to work well, right? Let's see:
 
 Now that we have removed the `padding` property from the button element (`SCSS` file),
 a new button dropped into the page doesn't look good with the default settings as shown below:
@@ -189,7 +195,7 @@ It is a function that gets the default value as the argument and returns the dat
 
 Let's see the example below:
 
-```ts {9-33} title="apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts"
+```ts {13-32} title="apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts"
 import { set } from "dot-prop-immutable";
 import { createInitialPerDeviceSettingValue } from "@webiny/app-page-builder/editor/plugins/elementSettings/elementSettingsUtils";
 import { DisplayMode } from "@webiny/app-page-builder/types";
