fix: update as per the feedback

--- a/docs/tutorials/create-a-package-in-monorepo.mdx
+++ b/docs/tutorials/create-a-package-in-monorepo.mdx
@@ -88,7 +88,8 @@ The content of the package looks as shown below:
 (...)
 ```
 
-As you can see from the example above, a package can be at the root level, for example, `apps/theme`, or grouped in a folder for example `packages/*`.
+As you can see from the example above, you can define exact workspace paths, or provide a wildcard to mark each subfolder as a workspace.
+
 In this tutorial, we use the latter.
 
 ### Initialize the Package
@@ -357,7 +358,7 @@ Babel is a JavaScript compiler. We need it because:
 In the `.babelrc.js` we just export the `.babel.react` configuration file which is defined in the project root.
 
 ```js title="packages/greeting/.babelrc.js"
-module.exports = require("../../.babel.react");
+module.exports = require("../../.babel.react")({ path: __dirname });
 ```
 
 :::info
@@ -429,9 +430,12 @@ yarn install
 ```
 Running this command will do two things:
 1. install the package dependencies.
-2. link the package via [`postinstall`](https://github.com/webiny/webiny-examples/blob/master/create-package-in-monorepo/package.json#L64) hook we run
-[`link-workspaces`](https://github.com/webiny/webiny-examples/blob/master/create-package-in-monorepo/scripts/linkWorkspaces.js) script.
+2. link the package.
 
+:::info
+The `link` step is performed by the [`link-workspaces`](https://github.com/webiny/webiny-examples/blob/master/create-package-in-monorepo/scripts/linkWorkspaces.js) script
+which runs via the [`postinstall`](https://github.com/webiny/webiny-examples/blob/master/create-package-in-monorepo/package.json#L64) hook.
+:::
 
 ### Build the Package
 To use the package we need to `build` it first.
@@ -439,7 +443,7 @@ To use the package we need to `build` it first.
 **"And how do we do that?"** you may ask, remember we added the `build` command under the `scripts` key inside the `package.json` file of the package.
 Now it's time we use it.
 
-We can simply `cd` into the package folder which is `packages/greeting` and runs:
+We can simply `cd` into the package folder which is `packages/greeting` and run:
 
 ```
 yarn build
@@ -480,7 +484,7 @@ import WelcomeMessage from "@examples/greeting";
 
 ## Conclusion
 
-Congratulations!! 🎉🥳
+Congratulations!
 
 You've successfully created a new package in a Webiny project.
 Monorepo organization makes it possible to structure different logical pieces of your project as multiple packages.
