--- a/docs/webiny-overview/security.mdx
+++ b/docs/webiny-overview/security.mdx
@@ -9,16 +9,17 @@ description: Overview of security strategy
 :::tip What You’ll Learn
 
 - how we approach security
+- additional security recommendations
 
 :::
 
 ## About
 
-If we don't have security, we can't really say we have a good product. Although Webiny is a self-hosted solution, meaning you have the control over the security, it's still important for us to provide an overview in our security practices. This will make you acquainted with our approach, and will make it easier to align your implementation to some of the best practices we established.
+If we don't have security, we can't really say we have a good product. Although Webiny is a self-hosted solution, meaning you control your security, it's still important for us to provide an overview of our security practices. This will make you acquainted with our approach, and will make it easier to align your implementation to some of the best practices we established.
 
 This being an overview article, it will provide the main elements and a clear distinction in terms of the security responsibilities that are on your end in comparison to the ones being handled by Webiny.
 
-We've structure the article in 4 main sections:
+We've structured the article into 4 main sections:
 
 - **Codebase** - how we ensure our codebase isn't compromised
 - **Infrastructure** - how the security layer is implemented as part of the infrastructure that Webiny deploys
@@ -45,9 +46,15 @@ To learn more about Webiny's architecture, check out [this article](/docs/key-to
 
 :::
 
-The serverless services Webiny uses as part of its architecture are fault-tolerant by design, the only exception being Elasticsearch, which in the production stack, is made highly-available with multi AZ deployment.
+The serverless services Webiny uses as part of its architecture are fault-tolerant by design. The only exception is Elasticsearch. In the Webiny production deployment stack, Elasticsearch is automatically deployed in multiple AZs, making it highly-available. Any public access, in both VPC and non-VPC deployment is restricted.
 
-There are zero servers you need to manage, reducing the risk of a security breach due to misconfiguration. Serverless services are tested by the cloud provider against all forms of attacks across millions of customers, giving your confidence in their security. Serverless services in general reduce the potential attack vectors that can be used against your application.
+:::info Update coming soon
+
+We're soon to release an update that allows you to use different databases to replace Elasticsearch.
+
+:::
+
+With Webiny there are zero servers you need to manage, reducing the risk of a security breach due to misconfiguration. Serverless services are tested by the cloud provider against all forms of attacks across millions of customers, giving your confidence in their security. Serverless services in general reduce the potential attack vectors that can be used against your application.
 
 Webiny ships with 2 infrastructure stacks by default, a development one and a production one.
 
@@ -65,17 +72,17 @@ Additional security improvements you can make to your project:
 
 ## Application
 
-Webiny is built to support different authentication mechanisms. Out of the box, it is configured to work with [AWS Cognito](https://aws.amazon.com/cognito/), an enterprise grade, battle tested identity provider. The framework, however, supports any identity provider, by means of plugins.
+Webiny is built to support different authentication mechanisms. Out of the box, it is configured to work with [AWS Cognito](https://aws.amazon.com/cognito/), an enterprise-grade, battle-tested identity provider. The framework, however, supports any identity provider, by means of plugins.
 
-Webiny draws a very clear line between **authentication** and **authorization**. We rely on third party IdPs for authentication, and use a very flexible system of permissions for authorization.
+Webiny draws a very clear line between **authentication** and **authorization**. We rely on third-party IdPs for authentication and use a very flexible system of permissions for authorization.
 
-Authorization is usually very closely tied to business logic, so using scopes from the JWT, or simple string-based roles, is not enough for complex business applications. To allow different types of integration, we provide a very thin security framework, based on plugins. On top of that we define permissions as rich objects with different application-related properties.
+Authorization is usually very closely tied to business logic, so using scopes from the JWT, or simple string-based roles is not enough for complex business applications. To allow different types of integration, we provide a very thin security framework, based on plugins. On top of that, we define permissions as rich objects with different application-related properties.
 
 ## Data
 
-Because Webiny is self-hosted and under the MIT license, your data stays within your cloud infrastructure. In practice this usually means there is no need for any legal, data compliance or GDPR changes to be made when adopting Webiny.
+Because Webiny is self-hosted and under the MIT license, your data stays within your cloud infrastructure. In practice, this usually means there is no need for any legal, data compliance or GDPR changes to be made when adopting Webiny.
 
-When it comes to storing your data, it's saved inside a DynamoDB database and Elasticsearch, and file are stored inside a S3 bucket.
+When it comes to storing your data, it's saved inside a DynamoDB database and Elasticsearch, and files are stored inside an S3 bucket.
 
 All the data inside DynamoDB is encrypted in transit and at rest by default.
 
@@ -83,11 +90,11 @@ All the data inside Elasticsearch is encrypted at transit only, by default.
 
 :::info Elasticsearch Encrypt at rest
 
-For production cases, we recommend you also encrypt data at rest in Elasticserch, but ensure you have proper key management strategy in place beforehand otherwise it could lead to making your data inaccessible. For more info visit: https://docs.aws.amazon.com/elasticsearch-service/latest/developerguide/encryption-at-rest.html
+For production cases, we recommend you also encrypt data at rest in Elasticserch. Ensure you have a proper key management strategy in place beforehand otherwise it could lead to making your data inaccessible. For more info visit: https://docs.aws.amazon.com/elasticsearch-service/latest/developerguide/encryption-at-rest.html
 
 :::
 
-The data inside S3 bucket by default is not encrypted, is set to be publicly accessible and versioning is turned off. The public access is only allowed on the `list` command. Write operations need to be signed with a security token to be allowed. We advise that you adjust these parameter to the needs of your project accordingly.
+The data inside S3 bucket by default is not encrypted, is set to be publicly accessible and versioning is turned off. Public access is only allowed on the `list` command. Write operations need to be signed with a security token to be allowed. We advise that you adjust these parameters to the needs of your project accordingly.
 
 :::info Making S3 private
 
@@ -99,8 +106,8 @@ If needed you can restrict access to the S3 buckets by modifying the ACL policy 
 
 #### Can I use a different identity provider?
 
-Yes, absolutely. The default IdP implementation contains as a set of plugins on API and React side. All you need to do is follow the same principle and implement your own plugins that will work with the IdP of your choice.
+Yes, absolutely. The default IdP implementation contains a set of plugins on the API and React sides. All you need to do is follow the same principle and implement your own plugins that will work with the IdP of your choice.
 
-#### Can I roll my own authentication system instead of using a third party IdP?
+#### Can I roll my own authentication system instead of using a third-party IdP?
 
 We don't recommend it, but yes, you can. Following the same implementation strategy that comes with Webiny by default, you can create all kinds of authentication mechanisms.
