introduction.mdx:   is build...   ->   is built...

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -44,7 +44,7 @@ With Webiny you can build:
 
 ### Technology
 
-Webiny is build using a modern development toolchain that makes the experience for developers much more enjoyable. Technologies Webiny uses:
+Webiny is built using a modern development toolchain that makes the experience for developers much more enjoyable. Technologies Webiny uses:
 
 - [React](https://reactjs.org/)
 - [GraphQL](https://graphql.org/)
