fix: improve "SubscriptionRequiredException" error explanation

--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -104,7 +104,7 @@ We're aware of this fact, and this is mainly because of the [Amazon ElasticSearc
 
 Unfortunately, this is a well-known issue for quite some time, and until the present, there haven't been any positive improvements.
 
-#### The AWS Access Key Id needs a subscription for the service
+#### SubscriptionRequiredException: The AWS Access Key Id needs a subscription for the service
 
 In some cases, upon deploying a new Webiny project, it's possible for users to experience the following error being thrown in their terminal:
 
@@ -112,7 +112,14 @@ In some cases, upon deploying a new Webiny project, it's possible for users to e
 SubscriptionRequiredException: The AWS Access Key Id needs a subscription for the service
 ```
 
-This error can happen if an AWS account was just created. If that's the case, then there needs to pass some time until the account is fully activated on the AWS side. So, the only thing that can be done at this point is simply waiting and trying again later.
+The following are some of the reasons why you might be receiving this error:
+
+1. you didn't verify your phone number
+2. you didn't verify your payment method
+3. you didn't select a support subscription (free or other)
+4. if you created a brand new AWS account, it wasn't yet processed on the AWS side
+
+The account signup and verification process can be completed via https://portal.aws.amazon.com/billing/signup?type=resubscribe#/resubscribed.
 
 #### Pulumi is throwing a `syscall.loadsystemlibrary` exception
 There could be various reasons why this error was thrown. But, if deploying from a Windows machine, we've seen that it could be
