--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -92,3 +92,23 @@ The command first finds all packages that are located in the project application
 We're aware of this fact, and this is mainly because of the [Amazon ElasticSearch Service](https://aws.amazon.com/elasticsearch-service/). While other cloud infrastructure resources get deployed reasonably fast, this service can take anywhere from 15 to 30 minutes to become ready.
 
 Unfortunately, this is a well-known issue for quite some time, and until the present, there haven't been any positive improvements.
+
+The AWS Access Key Id needs a subscription for the service#
+In some cases, upon deploying a new Webiny project, it's possible for users to experience the following error being thrown in their terminal:
+
+#### SubscriptionRequiredException: The AWS Access Key Id needs a subscription for the service
+
+In some cases, upon deploying a new Webiny project, it's possible for users to experience the following error being thrown in their terminal:
+
+```
+SubscriptionRequiredException: The AWS Access Key Id needs a subscription for the service
+```
+
+The following are some of the reasons why you might be receiving this error:
+
+1. you didn't verify your phone number
+2. you didn't verify your payment method
+3. you didn't select a support subscription (free or other)
+4. if you created a brand new AWS account, it wasn't yet processed on the AWS side
+
+The account signup and verification process can be completed via https://portal.aws.amazon.com/billing/signup?type=resubscribe#/resubscribed.
