fix(create-an-application): links towards the introduction

--- a/docs/tutorials/create-an-application/admin-area-package.mdx
+++ b/docs/tutorials/create-an-application/admin-area-package.mdx
@@ -12,7 +12,7 @@ description: Quickly create and deploy Admin area package.
 
 
 ## Prerequisites
-Before you start this tutorial, make sure that you have Webiny installed and to read our [Introduction](./introduction) tutorial.
+Before you start this tutorial, make sure that you have Webiny installed and to read our [Introduction](/docs/tutorials/create-an-application/introduction) tutorial.
 
 ## Overview
 The UI scaffold is our boilerplate React application that works out of the box without you needing to actually write any code.
