--- a/docs/tutorials/create-an-application/api-package.mdx
+++ b/docs/tutorials/create-an-application/api-package.mdx
@@ -12,7 +12,7 @@ description: Quickly create and deploy API package.
 
 
 ## Prerequisites
-Before you start this tutorial, make sure that you have Webiny installed and to read our [Introduction](./introduction) tutorial.
+Before you start this tutorial, make sure that you have Webiny installed and to read our [Introduction](/docs/tutorials/create-an-application/introduction) tutorial.
 
 ## Overview
 The API scaffold is our boilerplate GraphQL API that works out of the box without you needing to actually write any code.
