fix: correct link

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -136,7 +136,7 @@ This error can occur if one of the previous deployments of your [project applica
 ##### One of the Previous Deployments Has Been Interrupted
 In case of the former, you'll need to open your Pulumi state files, and find all of the resources whose deployment status is in `pending_operations` state. If we're talking about local development environment, those files are located in your `.pulumi` files and can be manually edited. Otherwise, you'll need to use the mentioned [`pulumi stack export`](https://www.pulumi.com/docs/reference/cli/pulumi_stack_export/) and [`pulumi stack import`](https://www.pulumi.com/docs/reference/cli/pulumi_import/) commands.
 
-If you didn't install the Pulumi CLI manually by yourself, which is usually the case for most Webiny users, you can execute the above commands via the [Webiny CLI](/docs/key-topics/webiny-cli), for example:
+If you didn't install the Pulumi CLI manually by yourself, which is usually the case for most Webiny users, you can execute the above commands via the [`pulumi`](/docs/how-to-guides/deployment/execute-pulumi-commands) command, for example:
 
 ```bash
 # Export state files for "apps/website" project application ("dev" environment).
