--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -50,6 +50,14 @@ The `--env` argument is required.
 For more hands-on information on the above listed commands, please visit the [Deploy Your Project](/docs/how-to-guides/deployment/deploy-your-project) and [Destroy Cloud Infrastructure](/docs/how-to-guides/deployment/destroy-cloud-infrastructure) guides.
 :::
 
+### `yarn webiny pulumi {folder} --env {env} -- {command}`
+
+Provides a way to execute Pulumi specific commands directly via the Pulumi CLI.
+
+:::info
+For more information, please visit the [Execute Pulumi Commands](/docs/how-to-guides/deployment/execute-pulumi-commands) guide.
+:::
+
 ### `yarn webiny info --env {env}`
 
 Returns useful URLs, for example, the URL over which the deployed GraphQL API can be accessed.
