fix: update theme docs structure

--- a/docs/references/page-builder/plugins.mdx
+++ b/docs/references/page-builder/plugins.mdx
@@ -93,3 +93,27 @@ export type PbEditorPageElementStyleSettingsPlugin = Plugin & {
   elements?: boolean | string[];
 };
 ```
+
+### `pb-theme`
+
+```ts
+export type PbTheme = {
+  colors: { [key: string]: string };
+  elements: { [key: string]: any };
+  typography: {
+    [key: string]: {
+      label: string;
+      component: string | React.ComponentType<any>;
+      className: string;
+    };
+  };
+};
+```
+
+### `pb-page-layout`
+
+```ts
+export type PbPageLayoutPlugin = Plugin & {
+  layout: PbPageLayout;
+};
+```
