--- a/docs/tutorials/create-an-application/securing-your-application.mdx
+++ b/docs/tutorials/create-an-application/securing-your-application.mdx
@@ -9,6 +9,7 @@ description: Learn how you can secure your applications.
 import CenteredImage from "../../mdxComponents/centeredImage";
 import securityGroupsSelection from "./securing-your-application/security-groups-selection.png";
 import securityGroupsPermissions from "./securing-your-application/security-groups-permissions.png";
+import addedSecurityPermissionsGroup from "./securing-your-application/added-security-permissions-group.png";
 
 :::tip What you'll learn
 
@@ -18,14 +19,14 @@ import securityGroupsPermissions from "./securing-your-application/security-grou
 
 ## Overview
 
-In previous two sections, we've seen how we can quickly expand the GraphQL schema of the main GraphQL API, and also how we can add new modules in the **Admin Area** application. All with a couple of built-in scaffolding tools.
+In previous two sections, we've seen how we can quickly expand the GraphQL schema of the main GraphQL API, and also how we can add new modules in the **Admin Area** application. All with a couple of built-in scaffolding utilities.
 
 In this tutorial, we expand our application by adding a layer of security around it. With it, we want to achieve the following:
 
 1. prevent users from executing GraphQL API queries and mutations, if they don't have the necessary security permissions
-2. prevent users from accessing modules we've added into the Admin Area application, if the user doesn't have the necessary security permissions)
+2. prevent users from accessing modules we've added into the Admin Area application, if the user doesn't have the necessary security permissions
 
-Note that in order to implement both behaviours, we are relying on **security permissions**, which is the first step of implementing a security layer for your application, and is the first topic we cover in this tutorial.
+Note that in order to implement both behaviours, we are relying on **security permissions**, which is the first step of implementing a security layer for our application, and is the first topic we cover in this tutorial.
 
 :::info
 If you want to learn more about the main GraphQL API and how it works on the cloud infrastructure level, check out the [GraphQL Requests](/docs/key-topics/cloud-infrastructure/api/graphql-requests) page of the [Cloud Infrastructure - API](/docs/key-topics/cloud-infrastructure/api/introduction) key topics section.
@@ -33,7 +34,7 @@ If you want to learn more about the main GraphQL API and how it works on the clo
 
 ## Security Permissions
 
-It all starts with security permissions.
+> It all starts with security permissions.
 
 On a code level, security permissions are plain JavaScript objects, which allow us to perform identity [authorization](https://en.wikipedia.org/wiki/Authorization). In other words, these objects contain information that tells us which resources an identity (for example, a logged-in user) can access, and which it cannot.
 
@@ -56,34 +57,137 @@ A simple security permission object might look something like the following:
 }
 ```
 
-With Webiny's built-in Security application, every identity (for example, a logged in user) belongs to **exactly one** security group. But, note that a single security group can have multiple security permissions objects assigned to it.
+Furthermore, security permissions are assigned to identities via security groups. With Webiny's built-in Security application, every identity (for example, a logged in user) belongs to **exactly one** security group. But, note that a single security group can have multiple security permissions objects assigned to it, allowing or preventing access across multiple Webiny and custom applications.
 
-This can be seen when creating a new security group via the Security > Groups module in the Admin Area, where you get to specify permissions for every installed Webiny application:
+This can be seen while creating a new security group via the Security > Groups module in the Admin Area, where you get to specify permissions for every installed Webiny application:
 
 <CenteredImage alt="Only a Single Security Group Allowed" src={securityGroupsPermissions} />
 
-Internally, making changes in one or more of these sections will result in one or more permission objects to be defined. And, once we submit the form, all of the different permission objects that were created in the process, are sent to the GraphQL API and stored in the database (along with other general security group information - name, slug, and description).
+Internally, making changes in one or more of these sections will result in one or more permission objects to be created. And, once we submit the form, all of the different permission objects that were created in the process, are sent to the GraphQL API and stored in the database (along with other general security group information - name, slug, and description).
 
-Ultimately, whenever an identity issues a GraphQL request, via a couple of built-in utilities, we can retrieve its security group and all of the permissions it contains. With that data, we can then determine whether a user has access to a particular API resource or a section in the UI.
+Ultimately, no matter if we're performing authorization on the API side or in the UI, via a couple of built-in utilities, we can retrieve identity's security group and all of the permissions it contains. With that data, we can then determine whether a user has access to a particular API resource or a section in the UI.
 
 ## Defining Custom Security Permissions
 
-Custom security permissions can be added in two ways.
+By adding a new permissions section in the security group form that we've seen above, we can allow system administrators to manually toggle access for our own custom features, for all identities that are linked with the particular security group.
 
-#### 1. Add new permissions via the security group form
-By simply adding a new section of permissions in the security group form that we've seen above, we can allow system administrators to manually toggle access for a specific feature for all identities with a particular security group.
+Continuing with the car manufacturers example that we've used in previous tutorials, we could add a new **Car Manufacturers** section, and offer a couple of different options to the system administrator:
 
-Adding a new section can be done by simply registering a new `admin-app-permissions-renderer` plugin, which we'll see in the following text.
+<CenteredImage alt="Added Security Permissions Group" src={addedSecurityPermissionsGroup} />
 
-#### 2. Programmatically
-Still work in progress.
-<!-- If your custom permissions are not too complicated and dynamic, and you don't need the option to toggle them manually, then in some cases, you can also -->
+To achieve this, within the Admin Area React application, we need to register a new `admin-app-permissions-renderer` plugin, like so:
 
-As mentioned, adding a new section in the security group form can be done via the `admin-app-permissions-renderer` plugin. Consider the following examples (ordered from simplest to more complext):
+```tsx title="packages/car-manufacturers/admin-app/src/permissions/index.tsx"
+import React, { useCallback, useMemo } from "react";
+import { i18n } from "@webiny/app/i18n";
+import { AdminAppPermissionRendererPlugin } from "@webiny/app-admin/types";
 
-https://github.com/webiny/webiny-js/tree/next/packages/app-i18n/src/admin/plugins/permissionRenderer
-https://github.com/webiny/webiny-js/tree/next/packages/app-file-manager/src/admin/plugins/permissionRenderer
-https://github.com/webiny/webiny-js/tree/next/packages/app-page-builder/src/admin/plugins/permissionRenderer
+// UI React Components - let's make it look nice:
+import { Grid, Cell } from "@webiny/ui/Grid";
+import { AccordionItem } from "@webiny/ui/Accordion";
+import { ReactComponent as CarManufacturersIcon } from "../assets/directions_car-24px.svg";
+import { PermissionInfo } from "@webiny/app-admin/components/Permissions";
+
+// Components for working with forms:
+import { Form } from "@webiny/form";
+import { Select } from "@webiny/ui/Select";
+import { Switch } from "@webiny/ui/Switch";
+
+const t = i18n.ns("app-i18n/admin/plugins/permissionRenderer");
+const PERMISSION_NAME = "car-manufacturers";
+
+export default {
+    type: "admin-app-permissions-renderer",
+    name: "admin-app-permissions-renderer-car-manufacturers",
+    render(props) {
+        // `value` represents an array of all permission objects selected for the
+        // security group we're currently editing. To apply changes to the `value`
+        // array, we use the provided `onChange` callback.
+        const { value, onChange } = props;
+
+        // Callback that gets triggered whenever a form element has changed.
+        // If needed, additional object manipulations can be performed too.
+        const onFormChange = useCallback(
+            data => {
+                // Let's filter out the `car-manufacturer` permission object.
+                // It's just easier to build a new one from scratch.
+                const newPermissions = value.filter(item => item.name !== PERMISSION_NAME);
+
+                // We only want the permissions object to end up in the `value` array if
+                // we have a value in `rwd` or `specialFeature` properties.
+                if (data.rwd || data.specialFeature) {
+                    newPermissions.push(data);
+                }
+
+                // Finally, call the `onChange` callback to assign the permissions
+                // object into the `value`.
+                onChange(newPermissions);
+            },
+            [value]
+        );
+
+        // Set up default form data, which happens once the security group data
+        // has been retrieved from the GraphQL API.
+        const defaultFormData = useMemo(() => {
+            return value.find(item => item.name === PERMISSION_NAME) || { name: PERMISSION_NAME };
+        }, [value]);
+
+        // We are using a couple of different React components to get the job done:
+        // - for a nicer UI - AccordionItem, Grid, Cell, and PermissionInfo components
+        // - for working with forms - Form, Bind, Select, and Switch components
+        return (
+            <AccordionItem
+                icon={<CarManufacturersIcon />}
+                title={t`Car Manufacturers`}
+                description={t`Manage Car Manufacturer app access permissions.`}
+            >
+                <Form data={defaultFormData} onChange={onFormChange}>
+                    {({ Bind }) => (
+                        <Grid>
+                            <Cell span={6}>
+                                <PermissionInfo title={t`Access Level`} />
+                            </Cell>
+                            <Cell span={6}>
+                                <Grid>
+                                    <Cell span={12}>
+                                        <Bind name={"rwd"}>
+                                            <Select label={t`Access Level`}>
+                                                <option value={"r"}>{t`Read`}</option>
+                                                <option value={"rw"}>{t`Read, write`}</option>
+                                                <option value={"rwd"}>{t`Read, write, delete`}</option>
+                                            </Select>
+                                        </Bind>
+                                    </Cell>
+                                    <Cell span={12}>
+                                        <Bind name={"specialFeature"}>
+                                            <Switch label={t`Has access to a special feature`} />
+                                        </Bind>
+                                    </Cell>
+                                </Grid>
+                            </Cell>
+                        </Grid>
+                    )}
+                </Form>
+            </AccordionItem>
+        );
+    }
+} as AdminAppPermissionRendererPlugin;
+```
+
+Once you've added the above shown code, make sure that the plugin is actually registered within the Admin Area React application. If you've been following the previous two tutorials, then, you can simply import it via the `packages/car-manufacturers/admin-app/src/index.ts` file:
+
+```ts title="packages/car-manufacturers/admin-app/src/index.ts" {4,6}
+import { Plugin } from "@webiny/plugins/types";
+import menus from "./menus";
+import routes from "./routes";
+import permissions from "./permissions";
+
+export default (): Plugin[] => [menus(), routes(), permissions];
+```
+
+So, with this permissions section, we added the ability for system administrators to define whether an identity, that belongs to currently viewed security group, can perform read, write, and delete actions on the car manufacturers data, and also whether it has access to an imaginary "special feature".
+
+Note that by completing this step, nothing will actually happen for identities that have or don't have these permissions in their security group. We still need to implement the actual logic, both on the API and Admin Area side, which we cover in the following sections.
 
 ## Securing GraphQL API Resolvers
 
