chore: add reminder

--- a/docs/how-to-guides/ci-cd/developing-serverless-applications.mdx
+++ b/docs/how-to-guides/ci-cd/developing-serverless-applications.mdx
@@ -26,7 +26,7 @@ Sure, there are different utilities that try to emulate the cloud and, sort of, 
 <!--
 
 - development in cloud - no local development
-
+- debugging
 - testing
 
 E2E - https://dev.to/theburningmonk/why-you-should-use-temporary-stacks-when-you-do-serverless-2ai0
