feat: add layout article
update page builder theme articles

--- a/docs/key-topics/theme/decoding-page-builder-theme/introduction.mdx
+++ b/docs/key-topics/theme/decoding-page-builder-theme/introduction.mdx
@@ -10,13 +10,14 @@ description: Decoding Page Builder Theme
 
 :::tip What You’ll Learn
 
-- what is Page Builder theme contains
+- what is Page Builder theme consists
 - what plugins are used in Page Builder theme
-  :::
+:::
 
 ## Overview
 
-This section covers the main configuration file for the Page Builder theme and all the plugins with which it is consist of.
+This section covers the main configuration file for the Page Builder theme and all the plugins with which it is consists.
+The goal of this article is to help you get familiar with the Page Builder theme, so that, you can customize it as per your need.
 
 ## Configuration File
 
@@ -43,7 +44,7 @@ The configuration file is structured in several sections like so:
 ]
 ```
 
-As you can see from the example above, we export two plugins that makes the default Page Builder theme.
+As you can see from the example above, we export two plugins that make the default Page Builder theme.
 Let's discuss them in detail in the next section.
 
 ## Page Builder Theme Plugins
@@ -71,29 +72,15 @@ In full a `pb-theme` plugin contains the following elements:
                         //..
                     ]
                 }
-            },
-            typography: {
-                h1: {
-                    label: "Heading 1",
-                    component: "h1",
-                    className: "webiny-pb-typography-h1"
-                },
-                h2: {
-                    label: "Heading 2",
-                    component: "h2",
-                    className: "webiny-pb-typography-h2"
-                },
-                //...
             }
         }
     } as PbThemePlugin
 ```
 
-Learn more about the specific theme elements:
+Learn more about the specific theme components:
 
-- [colors](/docs/webiny-apps/page-builder/development/themes/colors)
-- [elements](/docs/webiny-apps/page-builder/development/themes/elements)
-- [typography](/docs/webiny-apps/page-builder/development/themes/typography)
+- [colors](/docs/key-topics/theme/decoding-page-builder-theme/colors)
+- [elements](/docs/key-topics/theme/decoding-page-builder-theme/elements)
 
 ### [`pb-page-layout`](/docs/references/page-builder/plugins#pb-page-layout) plugin
 
@@ -148,11 +135,10 @@ After saving the change, your newly registered layout appear in the app as shown
 
 <img
   src={require("../../assets/theme/theme__custom-layout.gif").default}
-  className="no-shadow"
   style={{ marginBottom: 20 }}
   alt="New custom layout"
 />
 
 <!-- vale on -->
 
-To learn more about layouts and how to compose one, have a look at the [layouts page](/docs/webiny-apps/page-builder/development/themes/layouts).
+To learn more about layouts and how to compose one, have a look at the [layouts page](/docs/key-topics/theme/decoding-page-builder-theme/layouts).
