--- a/docs/key-topics/theme/decoding-page-builder-theme/colors.mdx
+++ b/docs/key-topics/theme/decoding-page-builder-theme/colors.mdx
@@ -10,15 +10,15 @@ description: Page Builder Theme - Colors
 
 :::tip What You’ll Learn
 
-- what is Page Builder theme contains
-- what plugins are used in Page Builder theme
-  :::
+- how are colors defined in Page Builder theme
+- how to modify the theme colors
+:::
 
 ## Overview
 
 The colors used throughout the theme and Page Builder pages are extracted as variables and presented as color presets in the page editor.
 
-This ensure a visual consistency between the theme and users creating content.
+This ensures a visual consistency between the theme and users creating content.
 
 ## Color Definition
 
@@ -46,6 +46,58 @@ Defining them as `CSS` variable is important because when you select a color in 
 
 the value of the color is stored in the database.
 
-In case of `CSS` variables, the `CSS` variable is stored, meaning that if you later decide to change the value of that color, you just change it in your CSS file, and all the existing content will pick up the new value.
+In the case of `CSS` variables, the `CSS` variable is stored, meaning that if you later decide to change the value of that color, you just change it in your CSS file, and all the existing content will pick up the new value.
 On the other hand, if we stored `HEX` or `RGB` values, all the existing content will not pick up the new value.
 :::
+
+You can add as many colors as you want, and name them whatever best fits your requirements. Make sure to have the actual color definitions somewhere inside your theme stylesheet.
+
+:::info
+We also recommend that all the color variables have a prefix `--webiny-theme-color-{name}`.
+
+The reason for this is that your website theme and its stylesheets are imported into the Page Builder inside the admin interface. Using this prefix we ensure that there are no clashes between the style names of your website and Webiny administration.
+:::
+
+The reason why we import the website theme into the administration is that inside the Page Builder we want to show you how your page looks like when a user is browsing your website, and that is only possible if we have the same stylesheets as your website.
+
+## SaaS Variables
+
+Webiny themes use Sass variables, and all the colors are also mapped to `CSS` variables for ease of use and to enable better
+[style inheritance](/docs/webiny-apps/page-builder/development/themes/style-inheritance).
+If you open the [variables.scss](https://github.com/webiny/webiny-js/blob/next/apps/theme/pageBuilder/styles/variables.scss) file you'll find the default definitions inside.
+
+
+## Update the Theme Colors
+
+Let's update the theme colors by updating the `Sass` variables.
+Make the following changes in the [variables.scss](https://github.com/webiny/webiny-js/blob/next/apps/theme/pageBuilder/styles/variables.scss) file:
+
+```scss {5-6} title="apps/theme/pageBuilder/styles/variables.scss"
+//...
+// Some code is removed for the sake of brevity.
+
+// colors
+$webiny-pb-theme-primary: #77A6F7 !default;
+$webiny-pb-theme-secondary: #00887A !default;
+$webiny-pb-theme-background: #eaecec !default;
+$webiny-pb-theme-surface: #ffffff !default;
+$webiny-pb-theme-on-primary: #ffffff !default;
+$webiny-pb-theme-on-secondary: #ffffff !default;
+$webiny-pb-theme-on-surface: #000000 !default;
+$webiny-pb-theme-on-background: #131313 !default;
+$webiny-pb-theme-text-primary: #293042 !default;
+$webiny-pb-theme-text-secondary: #616161 !default;
+$webiny-pb-theme-color-border: #e8ebee !default;
+
+//...
+```
+After making these changes the Page Builder elements reflect the updated colors as shown below:
+<!-- vale off -->
+
+<img
+  src={require("./images/webiny-theme-colors.gif").default}
+  style={{ marginBottom: 20 }}
+  alt="Webiny page builder theme colors"
+/>
+
+<!-- vale on -->
