--- a/docs/key-topics/theme/introduction.mdx
+++ b/docs/key-topics/theme/introduction.mdx
@@ -1,23 +1,22 @@
 ---
 id: introduction
-title: Theme Introduction
+title: Page Builder Theme
 sidebar_label: Introduction
-keywords: ["theme", "style", "layout", "Webiny"]
-description: In this article, we'll learn an introduction about theme
+keywords: ["Webiny", "theme", "style", "layout", "plugin"]
+description: In this article, we'll learn about the Page Builder theme
 ---
 
 <!-- Always include this section on top of the page. -->
 
 :::tip What You’ll Learn
-
 - what is a theme
 - how theme is used in Webiny apps
 - how to register a theme
-  :::
+:::
 
 ## Overview
 
-In this section, you learn all about Webiny themes and its basic concepts. You get all the knowledge needed to create your own theme.
+In this section, you learn all about the Webiny theme and its basic concepts. You get all the knowledge needed to create your own theme.
 
 Styling is one of the more important tasks you might want to do on a website. The theme passes on the visual identity of your brand and ensures a uniform presentation across all the channels.
 
@@ -31,9 +30,10 @@ Webiny doesn't have a concept of a "global" theme that is shared across all appl
 
 With this approach each time you install a new app or a plugin, it automatically comes with all the visuals and layouts you need to start using it immediately.
 
-You have to understand that Webiny is not your basic blogging platform, Webiny is a serverless application framework upon which powerful serverless applications can be built. Those applications might have complex theme requirements. So instead of you going through dozens of files and pasting numerous code snippets in your existing theme, just to get the new app working, this one-theme-per-app concept removes that complexity since every apps automatically ships with its own theme package.
+You have to understand that Webiny is not your basic blogging platform, Webiny is a serverless application framework upon which powerful serverless applications can be built. Those applications might have complex theme requirements. So instead of you going through dozens of files and pasting numerous code snippets in your existing theme, just to get the new app working, this one-theme-per-app concept removes that complexity since every app automatically ships with its own theme package.
 
-As a benefit, each time you update Webiny, or one of its apps or, plugins, you don't need to go through a nerve-racking, nail-biting process of "hoping" that you site will work after the update. Because each app update automatically updates the theme just for that app you don't need to worry that there will be incompatibilities between apps on the theme side which cause the website to break.
+As a benefit, each time you update Webiny, or one of its apps or, plugins, you don't need to go through a nerve-racking, nail-biting process of "hoping" that your website will work after the update.
+Because each app update automatically updates the theme just for that app you don't need to worry that there will be incompatibilities between apps on the theme side which cause the website to break.
 
 ## Registering a Theme
 
@@ -57,4 +57,4 @@ plugins.register = [
 
 That's all it takes to register a theme. The same principle applies if you want to register your own theme.
 
-Creating and registering a new theme is just a question of creating a new packages and replacing the existing theme plugin with your own. We'll cover in greater detail how this plugin should look like and what it should contain.
+Creating and registering a new theme is just a question of creating a new package and replacing the existing theme plugin with your own. We'll cover in greater detail how this plugin should look like and what it should contain.
