fix: broken link

--- a/docs/key-topics/theme/decoding-page-builder-theme/colors.mdx
+++ b/docs/key-topics/theme/decoding-page-builder-theme/colors.mdx
@@ -63,7 +63,7 @@ The reason why we import the website theme into the administration is that insid
 ## SaaS Variables
 
 Webiny themes use Sass variables, and all the colors are also mapped to `CSS` variables for ease of use and to enable better
-[style inheritance](/docs/webiny-apps/page-builder/development/themes/style-inheritance).
+style inheritance. <!-- Add the link to style inheritance article -->
 If you open the [variables.scss](https://github.com/webiny/webiny-js/blob/next/apps/theme/pageBuilder/styles/variables.scss) file you'll find the default definitions inside.
 
 
