fix: update article title

--- a/docs/key-topics/theme/introduction.mdx
+++ b/docs/key-topics/theme/introduction.mdx
@@ -1,9 +1,9 @@
 ---
 id: introduction
-title: Page Builder Theme
+title: Introduction
 sidebar_label: Introduction
 keywords: ["Webiny", "theme", "style", "layout", "plugin"]
-description: In this article, we'll learn about the Page Builder theme
+description: In this article, we'll learn about the theme
 ---
 
 <!-- Always include this section on top of the page. -->
